--- a/MvcApplication1/packages.config
+++ b/MvcApplication1/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotNetOpenAuth.AspNet" version="4.0.3.12153" targetFramework="net40" />
-  <package id="DotNetOpenAuth.Core" version="4.0.3.12153" targetFramework="net40" />
-  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.0.3.12153" targetFramework="net40" />
-  <package id="DotNetOpenAuth.OAuth.Core" version="4.0.3.12153" targetFramework="net40" />
-  <package id="DotNetOpenAuth.OpenId.Core" version="4.0.3.12153" targetFramework="net40" />
-  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.0.3.12153" targetFramework="net40" />
+  <package id="Antlr.Unofficial" version="3.4.1.0" targetFramework="net40" />
+  <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net40" />
+  <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net40" />
+  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net40" />
+  <package id="DotNetOpenAuth.OAuth.Core" version="4.1.4.12333" targetFramework="net40" />
+  <package id="DotNetOpenAuth.OpenId.Core" version="4.1.4.12333" targetFramework="net40" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.4.12333" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
@@ -14,6 +15,7 @@
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0-alpha1" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
@@ -26,10 +28,10 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
-  <package id="Modernizr" version="2.5.3" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net40" />
+  <package id="System.Web.Optimization" version="0.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="Twitter.Bootstrap" version="2.2.2" targetFramework="net40" />
   <package id="Twitter.Bootstrap.MVC" version="1.1.2" targetFramework="net40" />
   <package id="WebActivator" version="1.5.3" targetFramework="net40" />
-  <package id="WebGrease" version="1.1.0" targetFramework="net40" />
+  <package id="WebGrease" version="1.3.0" targetFramework="net40" />
 </packages>
